--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "es6-promise": "^4.0.5",
     "express": "^4.13.4",
+    "firebase": "^3.6.4",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
     "lodash": "^4.17.2",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0",
     "react-bootstrap": "^0.30.7",
+    "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
   },
