--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
